<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Crocodile</string>
    <string name="action_settings">menu</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_prompt">Enter username</string>
    <string name="password_prompt">Enter password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">Forgot password</string>

</resources>
